--- a/src/app/features/admin/trainer/trainer/trainer.component.html
+++ b/src/app/features/admin/trainer/trainer/trainer.component.html
@@ -3,14 +3,14 @@
     <div class="row">
         <div class="col-md-3 sidebar">
             <div class="trainer-info">
-                <img *ngIf="trainerData.Image" class="trainer-profile-pic"
-                    src="{{trainerData.Image}}"
+                <img *ngIf="trainerData?.Image" class="trainer-profile-pic"
+                    src="{{trainerData?.Image}}"
                     alt="Trainer Profile Picture">
-                    <img *ngIf="!trainerData.Image" class="trainer-profile-pic"
+                    <img *ngIf="!trainerData?.Image" class="trainer-profile-pic"
                     src="../../../../../assets/public/blank-profile-picture.webp"
                     alt="Trainer Profile Picture">
-                <h3>{{trainerData.Name}}</h3>
-                <p>{{trainerData.Email}}</p>
+                <h3>{{trainerData?.Name}}</h3>
+                <p>{{trainerData?.Email}}</p>
             </div>
             <div class="dashboard-nav">
                 <ul>
@@ -24,7 +24,7 @@
 
         <div class="col-md-9 main-content">
             <div class="overview-header">
-                <h2>Welcome back, {{trainerData.Name}}!</h2>
+                <h2>Welcome back, {{trainerData?.Name}}!</h2>
                 <p>Here's an overview of your recent activity and clients.</p>
             </div>
 
@@ -33,7 +33,7 @@
                     <div class="card">
                         <div class="card-body">
                             <h4>Total Clients</h4>
-                            <h2>{{userData.length}}</h2>
+                            <h2>{{userData?.length}}</h2>
                         </div>
                     </div>
                 </div>
