--- a/src/app/features/admin/news-management/news-management.component.html
+++ b/src/app/features/admin/news-management/news-management.component.html
@@ -3,6 +3,8 @@
 
 <div class="container">
     <h3>News Management</h3>
-    <app-data-table [Headers]="headers" [keyNames]="keynames" [addItemUrl]="newItemurl" [editItemUrl]="editItemUrl" [tableData]="Data"
-        [isUsers]="user" [imageVisibility]="true" [itemName]="'news'" (sendTrigger)="operationTrigger($event)" (sendTrigger)="statusUpdate($event)"></app-data-table>
+    <app-data-table [Headers]="headers" [keyNames]="keynames" [addItemUrl]="newItemurl" [editItemUrl]="editItemUrl"
+        [tableData]="Data" [isUsers]="user" [imageVisibility]="true" [itemName]="'news'" [itemCount]="itemCount"
+        (passPage)="fetchDataPageNo($event)" (sendTrigger)="operationTrigger($event)"
+        (sendTrigger)="statusUpdate($event)"></app-data-table>
 </div>
