--- a/src/app/features/admin/packages-management/packages-management.component.html
+++ b/src/app/features/admin/packages-management/packages-management.component.html
@@ -4,5 +4,5 @@
 <div class="container">
     <h3>Packages Management</h3>
     <app-data-table [Headers]="headers" [keyNames]="keynames" [addItemUrl]="newItemurl" [editItemUrl]="editItemUrl" [tableData]="Data"
-        [isUsers]="user" [itemName]="'package'" (sendTrigger)="operationTrigger($event)" (sendTrigger)="statusUpdate($event)"></app-data-table>
+        [isUsers]="user" [itemName]="'package'" [itemCount]="itemCount" (passPage)="fetchDataPageNo($event)" (sendTrigger)="operationTrigger($event)" (sendTrigger)="statusUpdate($event)"></app-data-table>
 </div>
